--- a/fullstack/capstone/package.json
+++ b/fullstack/capstone/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.5",
     "service-worker": "^0.0.0",
+    "sweetalert2": "^11.7.27",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
