--- a/fullstack/capstone/package.json
+++ b/fullstack/capstone/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.5",
     "service-worker": "^0.0.0",
